# xpyutils

./: .gitignore  README.md  pyproject.toml
tests/: test_lazy_property.py
xpyutils/: __init__.py  singleton.py
xpyutils/property/: __init__.py  base.py  lazy.py  presence_required.py
