[project]
name = 'xpyutils'
version = '0.0.1'
authors = [
    {name = 'Isaac Fei', email = 'isaac.omega.fei@gmail.com'},
]
description = 'Ongoing project of extra Python utilities including implementations of lazy property, regular expression, ...'
readme = 'README.md'
requires-python = '>=3.8'
dependencies = []

[tool.setuptools.packages.find]
where = ['.']
exclude = ['playground']  # empty by default
namespaces = false  # true by default