[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['.']
exclude = ['playground']  # empty by default
namespaces = false  # true by default

[project]
name = 'xpyutils'
version = '0.0.2'
authors = [
    {name = 'Isaac Fei', email = 'isaac.omega.fei@gmail.com'},
]
description = 'Ongoing project of extra Python utilities including implementations of lazy property, regular expression, ...'
readme = 'README.md'
requires-python = '>=3.0'
dependencies = []

[project.urls]
Homepage = 'https://github.com/Isaac-Fate/xpyutils'

